<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TV_new_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:text="@string/home_page_title"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LLV_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_new_posts">

        <LinearLayout
            android:id="@+id/LLV_post1"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:background="@drawable/post"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/TV_post1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/post1"
                android:textColor="@color/dark_brown"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TV_post1_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/post1_content"
                android:textColor="@color/light_brown"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLV_post2"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/post"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/TV_post2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/post2"
                android:textColor="@color/dark_brown"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TV_post2_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/post2_content"
                android:textColor="@color/light_brown"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLV_post3"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/post"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/TV_post3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/post3"
                android:textColor="@color/dark_brown"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TV_post3_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/post3_content"
                android:textColor="@color/light_brown"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLV_post4"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/post"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/TV_post4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/post4"
                android:textColor="@color/dark_brown"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/TV_post4_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/post4_content"
                android:textColor="@color/light_brown"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLV_by_professionals"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/post"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/LLH_navigation_bar"
        app:layout_constraintEnd_toStartOf="@+id/CV_add_post"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent">

        <Switch
            android:id="@+id/switch_allow_users"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="14dp"
            android:text="@string/toggle_button_only_posts_by_professionals"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/CV_add_post"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="200dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LLV_by_professionals"
        tools:layout_editor_absoluteY="531dp">

        <ImageView
            android:id="@+id/IV_add_post"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/add_icon2" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/LLH_navigation_bar"
        android:layout_width="415dp"
        android:layout_height="85dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/profilebar"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/CV_add_post"
        tools:layout_editor_absoluteX="0dp">


        <ImageView
            android:id="@+id/IV_navigation_icon_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/IV_navigation_icon_friends"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/friends" />


        <ImageView
            android:id="@+id/IV_navigation_icon_reminders"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/reminders" />

        <ImageView
            android:id="@+id/IV_navigation_icon_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/dogprofile" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LLH_navigation_bar_names"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/yellow"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/LLH_navigation_bar"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/TV_navigation_icon_home"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/navigation_icon_home"
            android:textColor="@color/dark_brown" />

        <TextView
            android:id="@+id/TV_navigation_icon_friends"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/navigation_icon_friends"
            android:textColor="@color/dark_brown" />

        <TextView
            android:id="@+id/TV_navigation_icon_reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/navigation_icon_reminders"
            android:textColor="@color/dark_brown" />

        <TextView
            android:id="@+id/TV_navigation_icon_profile"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/navigation_icon_profile"
            android:textColor="@color/dark_brown" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>